# startup_helper

./: .gitignore  CHANGELOG.md  README.md  env.example  pyproject.toml  requirements-dev.txt  streamlit_app.py
scripts/: run_lint.sh
src/agent_core/: __init__.py  agent_core.py
src/core_engine/: __init__.py  benchmarks.csv  formulas.py
src/gamification/: __init__.py  badges.py  badges.yml
src/infra/: __init__.py  logging_conf.py
src/wizard/: __init__.py  quality_score.py  questions.py  questions.yml  sanity_rules.py  sanity_rules.yml  tips.yml
tests/: test_core_engine.py  test_wizard_flow.py
